[package]
name = "eat_pig_food"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12.0", features = ["macros"] }
log = "0.4.17"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
lazy_static = "1.4.0"
clap = { version = "4.0.29", features = ["derive","env"] }
